<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50dp"
    android:background="@color/white">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/primary_color"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                app:srcCompat="@drawable/ic_close" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/archivo_medium"
                android:gravity="center"
                android:text="@string/conexion"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

    </RelativeLayout>

    <RadioGroup
        android:id="@+id/radiogrup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="70dp"
        android:padding="50dp">

        <RadioButton
            android:id="@+id/rbLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/primary_color"
            android:checked="true"
            android:text="@string/redLocal"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/rbExterno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/primary_color"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/redExterna"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/rbPruebas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/primary_color"
            android:text="@string/pruebas"
            android:textColor="@color/black" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGuardad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radiogrup"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/enable_disable"
        android:paddingEnd="20dp"
        android:text="@string/guardar"
        android:textColor="@color/white"
        android:textStyle="bold" />

</RelativeLayout>